--- a/Curriculum/index.html
+++ b/Curriculum/index.html
@@ -25,48 +25,47 @@ a:link,a:visited {
         <a id="main-content"></a>   	
                           <h2 class="title" id="page-title"><font face="MiloWeb">The H-Index for Management Information Systems (Updated January 2019)</font></h2>                                                       
 <div id="block-fieldblock-node-page-default-field-image" class="block block-fieldblock page-image-block first odd">      
-<p style="margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;"><strong><u><span style="font-size:13px;line-height:107%;">UA/Eller MIS Analytics Curriculum (Recommendations highlighted in boldface)</span></u></strong></p>
-<p style="margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;"><strong><span style="font-size:13px;line-height:107%;">Analytics Working Group members: H. Chen, G. Leroy, B. Zhang, Y. Ge, S. Youn. Date: January 23, 2020</span></strong></p>
-<ol style="list-style-type: upper-roman;margin-left:undefined;">
-  <li><span style="line-height:107%;font-size:13px;">BS</span></li>
-  <li><span style="line-height:107%;font-size:13px;">MIS 301 Data Structures (Junming); <strong>need to focus on Python, ADT, searching/sorting, library</strong></span></li>
-  <li><span style="line-height:107%;font-size:13px;">MIS 331 DBMS (Bin); relations, SQL</span></li>
-  <li><span style="line-height:107%;font-family:Wingdings;font-size:10.0pt;"><span style="font-family:Wingdings;">è</span></span><span style="line-height:107%;font-size:13px;">&nbsp;(arrow indicates prerequisite) MIS 464 Data Analytics (H Chen, Yong); web/data/text mining, DM algorithms, deep learning (CNN, RNN); <strong>possible for two semesters MIS 464A &amp; MIS 464B (Fall, Spring)</strong></span></li>
-  <li><span style="line-height:107%;font-size:13px;">MIS 373 Operations Management</span></li>
-  <li><span style="line-height:107%;font-family:Wingdings;font-size:10.0pt;"><span style="font-family:Wingdings;">è</span></span><span style="line-height:107%;font-size:13px;">&nbsp;MIS 4XX/5XX, <strong>Optimization/Dynamic Programming (Youn);</strong> <strong>possible new class by Youn for OM and MIS BS and MS students</strong></span></li>
-  <li><span style="line-height:107%;font-size:13px;">MIS 461/561, <strong>Data Visualization (Lusi)</strong>; Tableau, Python/R viz, Tufte viz; <strong>need to go beyond Tableau, possible for BS and MS students (with less technical background)</strong></span></li>
+<p><strong><u>UA/Eller MIS Analytics Curriculum (Recommendations highlighted in boldface)</u></strong></p>
+<p><strong>Analytics Working Group members: H. Chen, G. Leroy, B. Zhang, Y. Ge, S. Youn. Date: January 23, 2020</strong></p>
+<p><strong>BS</strong></p>
+<ol>
+  <li>MIS 301 Data Structures (Junming); <strong>need to focus on Python, ADT, searching/sorting, library</strong></li>
+  <li>MIS 331 DBMS (Bin); relations, SQL</li>
+  <li>è (arrow indicates prerequisite) MIS 464 Data Analytics (H Chen, Yong); web/data/text mining, DM algorithms, deep learning (CNN, RNN); <strong>possible for two semesters MIS 464A &amp; MIS 464B (Fall, Spring)</strong></li>
+  <li>MIS 373 Operations Management</li>
+  <li>è MIS 4XX/5XX, <strong>Optimization/Dynamic Programming (Youn);</strong> <strong>possible new class by Youn for OM and MIS BS and MS students</strong></li>
+  <li>MIS 461/561, <strong>Data Visualization (Lusi)</strong>; Tableau, Python/R viz, Tufte viz; <strong>need to go beyond Tableau, possible for BS and MS students (with less technical background)</strong></li>
 </ol>
-<p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.5in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;"><span style="font-size:13px;line-height:107%;">&nbsp;</span></p>
-<ol style="list-style-type: undefined;margin-left:undefined;">
-  <li><span style="line-height:107%;font-size:13px;">MS</span></li>
-  <li><span style="line-height:107%;font-size:13px;">MIS 507 Intro to Web Computing (Daniel gone); Python, ADT, library, data analytics interface; <strong>possible to turn Daniel’s Perl class to Python for all MS &amp; Ph.D. students</strong></span></li>
-  <li><span style="line-height:107%;font-size:13px;">MIS 531 DBMS (Faiz); relations, SQL</span></li>
-  <li><span style="line-height:107%;font-family:Wingdings;font-size:10.0pt;"><span style="font-family:Wingdings;">è</span></span><span style="line-height:107%;font-size:13px;">&nbsp;MIS 587 Business Intelligence (Yong); data warehouse, KPI, Web analytics; <strong>possible co-listed as MIS 487 elective</strong></span></li>
-  <li><span style="line-height:107%;font-family:Wingdings;font-size:10.0pt;"><span style="font-family:Wingdings;">è</span></span><span style="line-height:107%;font-size:13px;">&nbsp;MIS 510 <strong>Data &amp; Web Mining (Gondy)</strong>; intro to web, web APIs, DM and text mining; <strong>possible for Fall as Introduction required course</strong></span></li>
-  <li><span style="line-height:107%;font-family:Wingdings;font-size:10.0pt;"><span style="font-family:Wingdings;">è</span></span><span style="line-height:107%;font-size:13px;">&nbsp;MIS 545 Data Mining for Business (Bin); classification, clustering; <strong>possible to cover deep learning (CNN/RNN) for MS and Ph.D. students; possible co-listed as MIS 445 elective; possible for Spring after MIS 510 as elective</strong></span></li>
-  <li><span style="line-height:107%;font-family:Wingdings;font-size:10.0pt;"><span style="font-family:Wingdings;">è</span></span><span style="line-height:107%;font-size:13px;">&nbsp;MIS 584 Big Data Technologies (Yong); Hadoop, Spark; MLlib; <strong>possible use of AWS for free; need to combine with MIS 586 Big Data Analytics (Youn; currently wrong SNA content); possible co-listed as MIS 484 elective</strong></span></li>
-  <li><span style="line-height:107%;font-size:13px;">MIS 5XX, <strong>Optimization (Youn);</strong> <strong>possible new course, see above</strong></span></li>
-  <li><span style="line-height:107%;font-size:13px;">MIS 6XX <strong>Social Network Analysis (Sudha); possible for both Ph.D. and selected MS students</strong></span></li>
+<p>&nbsp;</p>
+<p><strong>MS</strong></p>
+<ol>
+  <li>MIS 507 Intro to Web Computing (Daniel gone); Python, ADT, library, data analytics interface; <strong>possible to turn Daniel’s Perl class to Python for all MS &amp; Ph.D. students</strong></li>
+  <li>MIS 531 DBMS (Faiz); relations, SQL</li>
+  <li>è MIS 587 Business Intelligence (Yong); data warehouse, KPI, Web analytics; <strong>possible co-listed as MIS 487 elective</strong></li>
+  <li>è MIS 510 <strong>Data &amp; Web Mining (Gondy)</strong>; intro to web, web APIs, DM and text mining; <strong>possible for Fall as Introduction required course</strong></li>
+  <li>è MIS 545 Data Mining for Business (Bin); classification, clustering; <strong>possible to cover deep learning (CNN/RNN) for MS and Ph.D. students; possible co-listed as MIS 445 elective; possible for Spring after MIS 510 as elective</strong></li>
+  <li>è MIS 584 Big Data Technologies (Yong); Hadoop, Spark; MLlib; <strong>possible use of AWS for free; need to combine with MIS 586 Big Data Analytics (Youn; currently wrong SNA content); possible co-listed as MIS 484 elective</strong></li>
+  <li>MIS 5XX, <strong>Optimization (Youn);</strong> <strong>possible new course, see above</strong></li>
+  <li>MIS 6XX <strong>Social Network Analysis (Sudha); possible for both Ph.D. and selected MS students</strong></li>
 </ol>
-<p style="margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;"><span style="font-size:13px;line-height:107%;">Possible Electives in Other Departments on Campus:</span></p>
-<ul style="list-style-type: disc;margin-left:undefined;">
-  <li><span style="line-height:107%;font-size:13px;">INFO 457/557, <strong>Deep Learning/NN</strong> <strong>(Bethard)</strong>; basic NN and DL algorithms</span></li>
-  <li><span style="line-height:107%;font-size:13px;">LING/CSC 539, <strong>Statistical NLP</strong> <strong>(Mihai)</strong>; advanced NLP with deep learning</span></li>
-  <li><span style="line-height:107%;font-size:13px;">SCO 526, <strong>Network Science seminar</strong> <strong>(Breiger)</strong>; advanced &nbsp;SNA</span></li>
+<p>&nbsp; &nbsp; &nbsp; Possible Electives in Other Departments on Campus:</p>
+<ul>
+  <li>INFO 457/557, <strong>Deep Learning/NN</strong> <strong>(Bethard)</strong>; basic NN and DL algorithms</li>
+  <li>LING/CSC 539, <strong>Statistical NLP</strong> <strong>(Mihai)</strong>; advanced NLP with deep learning</li>
+  <li>SCO 526, <strong>Network Science seminar</strong> <strong>(Breiger)</strong>; advanced &nbsp;SNA</li>
 </ul>
-<p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.5in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;"><span style="font-size:13px;line-height:107%;">&nbsp;</span></p>
-<ol style="list-style-type: undefined;margin-left:undefined;">
-  <li><span style="line-height:107%;font-size:13px;">Ph.D.</span></li>
-  <li><span style="line-height:107%;font-size:13px;">MIS 601 Statistical Foundations of ML (Junmin); statistical basis for ML</span></li>
-  <li><span style="line-height:107%;font-size:13px;">MIS 611A Design Science (Yong)</span></li>
-  <li><span style="line-height:107%;font-size:13px;">MIS 611B Behavioral Research (Sue)</span></li>
-  <li><span style="line-height:107%;font-size:13px;">MIS 611C <strong>Econometrics Research (Wei); possible for both Ph.D. and selected MS students</strong></span></li>
-  <li><span style="line-height:107%;font-size:13px;">MIS 696A Readings in MIS (Jay)</span></li>
-  <li><span style="line-height:107%;font-size:13px;">MIS 696D Data &amp; Web Mining (H Chen, Gondy)</span></li>
-  <li><span style="line-height:107%;font-size:13px;">MIS 696X <strong>OR Research (Youn);</strong> <strong>possible new course after the successful BS/MS Optimization course</strong></span></li>
-  <li><span style="line-height:107%;font-size:13px;">MIS 6XX<strong>&nbsp;SNA (Sudha)</strong>, see above; approved recently</span></li>
+<p>&nbsp;</p>
+<p><strong>Ph.D.</strong></p>
+<ol>
+  <li>MIS 601 Statistical Foundations of ML (Junmin); statistical basis for ML</li>
+  <li>MIS 611A Design Science (Yong)</li>
+  <li>MIS 611B Behavioral Research (Sue)</li>
+  <li>MIS 611C <strong>Econometrics Research (Wei); possible for both Ph.D. and selected MS students</strong></li>
+  <li>MIS 696A Readings in MIS (Jay)</li>
+  <li>MIS 696D Data &amp; Web Mining (H Chen, Gondy)</li>
+  <li>MIS 696X <strong>OR Research (Youn);</strong> <strong>possible new course after the successful BS/MS Optimization course</strong></li>
+  <li>MIS 6XX<strong>&nbsp;SNA (Sudha)</strong>, see above; approved recently</li>
 </ol>
-
 </div>
 
 
