--- a/Advice/index.html
+++ b/Advice/index.html
@@ -25,6 +25,7 @@ a:link,a:visited {
         <a id="main-content"></a>   	
                           
 <div id="block-fieldblock-node-page-default-field-image" class="block block-fieldblock page-image-block first odd">      
+
 <p><strong>Academic/Intellectual Advice:</strong></p>
 <ul>
   <li>Societal Impacts (e.g., health, cybersecurity, green IT, privacy) &gt; &nbsp;Academic Impacts (papers)</li>
@@ -34,43 +35,42 @@ a:link,a:visited {
   <li>EQ (effort, attitude, time management, motivation, aspiration, discipline) &gt; IQ (raw talents)</li>
 </ul>
 <p><strong>The Business Analytics Intellectual Landscape:</strong></p>
-<p><strong>&nbsp; 1. Major News Media and Scientific Publications (understanding the societal needs)</strong></p>
+<p><strong>&nbsp; I. Major News Media and Scientific Publications (understanding the societal needs)</strong></p>
 <ul>
   <li>The Economists (global, geopolitics), NYT (US), WSJ (global, business)</li>
   <li>Nature, Science (some in IT, e.g., deep learning, AI; network science)</li>
 </ul>
 <p>&nbsp;</p>
-<p><strong>&nbsp; 2. Major Industry Players/Labs (a global emerging IT landscape)</strong></p>
+<p><strong>&nbsp; II. Major Industry Players/Labs (a global emerging IT landscape)</strong></p>
 <ul>
   <li>FAANG: Facebook (social, facial recognition, AI), Amazon (e-commerce, recommender systems, logistics, cloud computing), Apple (mobile), Netflix (e-commerce, recommender systems), Google (SE, social, cloud computing, Brain, DeepMind)</li>
   <li>MI: Microsoft (AI, cloud computing), IBM (business analytics, cloud computing, AI/Waston)</li>
   <li>BATH: Baidu (SE, AI), Alibaba (e-commerce, m-commerce, AI), Tencent (social, m-commerce), Huawei (mobile, 5G, AI)</li>
 </ul>
 <p>&nbsp;</p>
-<p><strong>&nbsp; 3. Major Universities/Labs (check Google Scholar, DBLP, H-index)</strong></p>
+<p><strong>&nbsp; III. Major Universities/Labs (check Google Scholar, DBLP, H-index)</strong></p>
 <ul>
   <li>MIS: Arizona (H. Chen, Nunamaker), NYU (Tuzhilin), CMU</li>
   <li>CS: Berkeley (M. Jordan), Stanford (Andrew Ng, Feifei Li), Washington (O. Etzioni), UIUC (J. Han), UI Chicago (P. Yu), CMU, MIT; G. Hinton, Y. LeCun, Y. Bengio, I. Goodfellow (deep learning)</li>
 </ul>
-<p>
-  <br>
-</p>
-<p>&nbsp; <strong>4.&nbsp;</strong><strong>Major Federal Funding Agencies (UA/MIS funding $200M)</strong></p>
+<p>&nbsp;</p>
+<p><strong>&nbsp; IV. Major Federal Funding Agencies (UA/MIS funding $200M)</strong></p>
 <ul>
   <li>Research: NSF (STEM, $6B), NIH (health, $20B), DARPA (defense), IARPA (intelligence); UA/Eller/MIS Nunamker, H. Chen ($150M); NSF CyberCorps SFS Program (UA/AZSecure, $10M)</li>
   <li>Operational: NSA (cybersecurity), CIA, FBI, DOD, DHS; NSA/DHS CAE-CD, R, CO (UA/MIS)</li>
 </ul>
 <p>&nbsp;</p>
-<p><strong>&nbsp; 5. Major Professional Societies, Conferences &amp; Journals (joint ASAP)</strong></p>
+<p><strong>&nbsp; V. Major Professional Societies, Conferences &amp; Journals (join ASAP)</strong></p>
 <ul>
   <li>MIS: ICIS, AMCIS; MISQ, ISR, JMIS (top-3)</li>
   <li>ACM: ACM SIG (special interest group), SIGKDD, SIGIR, SIGCHI; ACM KDD, CACM, ACM TOIS</li>
   <li>IEEE Computer Society: IEEE ICDM, IEEE TKDE</li>
-  <li>Deep/Machine Learning: NeruIPS, IC on Learning Representation, IC on Machine Learning</li>
+  <li>Deep/Machine Learning: NeruIPS, IC on Learning Representations, IC on Machine Learning</li>
   <li>Health Informatics: AMIA, JAMIA, JBI</li>
   <li>Cybersecurity: DefCon, BlackHat; ACM CCS, IEEE S&amp;P, USENIX, IEEE ISI</li>
 </ul>
-<p>&nbsp; <strong>6. Major Analytics Applications &amp; Technologies (try ASAP)</strong></p>
+<p>&nbsp;</p>
+<p><strong>&nbsp; VI. Major Analytics Applications &amp; Technologies (try ASAP)</strong></p>
 <ul>
   <li>Applications: cybersecurity, health, e-commerce, social media, sports; drones, AV, VR, e-sports, facial recognition, smart city, 5G</li>
   <li>Technologies: data mining (structured), text mining, web mining, deep learning, adversarial learning, transfer learning, reinforcement learning</li>
