--- a/Curriculum/index.html
+++ b/Curriculum/index.html
@@ -27,17 +27,17 @@ a:link,a:visited {
 <div id="block-fieldblock-node-page-default-field-image" class="block block-fieldblock page-image-block first odd">      
 <p><strong><u>UA/Eller MIS Analytics Curriculum (Recommendations highlighted in boldface)</u></strong></p>
 <p><strong>Analytics Working Group members: H. Chen, G. Leroy, B. Zhang, Y. Ge, S. Youn. Date: January 23, 2020</strong></p>
-<p><strong>BS</strong></p>
+<p>&nbsp; <strong>BS</strong></p>
 <ol>
-  <li>MIS 301 Data Structures (Junming); <strong>need to focus on Python, ADT, searching/sorting, library</strong></li>
+  <li>MIS 301 Data Structures (Junming); <strong>need to focus on Python, syntax, ADT, searching/sorting, library, data, statistics, visualization (MIT Guttag book)</strong></li>
   <li>MIS 331 DBMS (Bin); relations, SQL</li>
-  <li>è (arrow indicates prerequisite) MIS 464 Data Analytics (H Chen, Yong); web/data/text mining, DM algorithms, deep learning (CNN, RNN); <strong>possible for two semesters MIS 464A &amp; MIS 464B (Fall, Spring)</strong></li>
+  <li>è&nbsp;(arrow indicates prerequisite) MIS 464<strong>&nbsp;Data Analytics (H Chen, Yong)</strong>; web/data/text mining, DM algorithms, deep learning (CNN, RNN); <strong>possible for two semesters MIS 464A &amp; MIS 464B (Fall, Spring)</strong></li>
   <li>MIS 373 Operations Management</li>
   <li>è MIS 4XX/5XX, <strong>Optimization/Dynamic Programming (Youn);</strong> <strong>possible new class by Youn for OM and MIS BS and MS students</strong></li>
   <li>MIS 461/561, <strong>Data Visualization (Lusi)</strong>; Tableau, Python/R viz, Tufte viz; <strong>need to go beyond Tableau, possible for BS and MS students (with less technical background)</strong></li>
 </ol>
 <p>&nbsp;</p>
-<p><strong>MS</strong></p>
+<p><strong>&nbsp; MS</strong></p>
 <ol>
   <li>MIS 507 Intro to Web Computing (Daniel gone); Python, ADT, library, data analytics interface; <strong>possible to turn Daniel’s Perl class to Python for all MS &amp; Ph.D. students</strong></li>
   <li>MIS 531 DBMS (Faiz); relations, SQL</li>
@@ -48,16 +48,17 @@ a:link,a:visited {
   <li>MIS 5XX, <strong>Optimization (Youn);</strong> <strong>possible new course, see above</strong></li>
   <li>MIS 6XX <strong>Social Network Analysis (Sudha); possible for both Ph.D. and selected MS students</strong></li>
 </ol>
-<p>&nbsp; &nbsp; &nbsp; Possible Electives in Other Departments on Campus:</p>
+<p>Possible Electives in Other Departments on Campus:</p>
 <ul>
   <li>INFO 457/557, <strong>Deep Learning/NN</strong> <strong>(Bethard)</strong>; basic NN and DL algorithms</li>
-  <li>LING/CSC 539, <strong>Statistical NLP</strong> <strong>(Mihai)</strong>; advanced NLP with deep learning</li>
-  <li>SCO 526, <strong>Network Science seminar</strong> <strong>(Breiger)</strong>; advanced &nbsp;SNA</li>
+  <li>INFO 450/550, <strong>Intro to AI (Morrison)</strong>; search, logic, Markov DP, HMM, Reinforcement Learning</li>
+  <li>LING/CSC 539, <strong>Statistical NLP</strong> <strong>(Mihai)</strong>; advanced NLP with deep learning, LSTM</li>
+  <li>SCO 526, <strong>Research Methods for SNA</strong> <strong>(Breiger)</strong>; advanced &nbsp;SNA</li>
 </ul>
 <p>&nbsp;</p>
-<p><strong>Ph.D.</strong></p>
+<p>&nbsp; <strong>Ph.D.</strong></p>
 <ol>
-  <li>MIS 601 Statistical Foundations of ML (Junmin); statistical basis for ML</li>
+  <li>MIS 601 <strong>Statistical Foundations of ML (Junming)</strong>; statistical basis for ML</li>
   <li>MIS 611A Design Science (Yong)</li>
   <li>MIS 611B Behavioral Research (Sue)</li>
   <li>MIS 611C <strong>Econometrics Research (Wei); possible for both Ph.D. and selected MS students</strong></li>
