--- a/Curriculum/index.html
+++ b/Curriculum/index.html
@@ -27,24 +27,24 @@ a:link,a:visited {
 <div id="block-fieldblock-node-page-default-field-image" class="block block-fieldblock page-image-block first odd">      
 <p><strong><u>UA/Eller MIS Analytics Curriculum (Recommendations highlighted in boldface)</u></strong></p>
 <p><strong>Analytics Working Group members: H. Chen, G. Leroy, B. Zhang, Y. Ge, S. Youn. Date: January 23, 2020</strong></p>
-<p>&nbsp; <strong>BS</strong></p>
+<p><strong>&nbsp; BS</strong></p>
 <ol>
   <li>MIS 301 Data Structures (Junming); <strong>need to focus on Python, syntax, ADT, searching/sorting, library, data, statistics, visualization (MIT Guttag book)</strong></li>
   <li>MIS 331 DBMS (Bin); relations, SQL</li>
-  <li>è&nbsp;(arrow indicates prerequisite) MIS 464<strong>&nbsp;Data Analytics (H Chen, Yong)</strong>; web/data/text mining, DM algorithms, deep learning (CNN, RNN); <strong>possible for two semesters MIS 464A &amp; MIS 464B (Fall, Spring)</strong></li>
+  <li>* (asterisk indicates prerequisite) MIS 464<strong>&nbsp;Data Analytics (H Chen, Yong)</strong>; web/data/text mining, DM algorithms, deep learning (CNN, RNN); <strong>possible for two semesters MIS 464A &amp; MIS 464B (Fall, Spring)</strong></li>
   <li>MIS 373 Operations Management</li>
-  <li>è MIS 4XX/5XX, <strong>Optimization/Dynamic Programming (Youn);</strong> <strong>possible new class by Youn for OM and MIS BS and MS students</strong></li>
+  <li>* MIS 4XX/5XX, <strong>Optimization/Dynamic Programming (Youn);</strong> <strong>possible new class by Youn for OM and MIS BS and MS students</strong></li>
   <li>MIS 461/561, <strong>Data Visualization (Lusi)</strong>; Tableau, Python/R viz, Tufte viz; <strong>need to go beyond Tableau, possible for BS and MS students (with less technical background)</strong></li>
 </ol>
 <p>&nbsp;</p>
-<p><strong>&nbsp; MS</strong></p>
+<p>&nbsp; <strong>MS</strong></p>
 <ol>
   <li>MIS 507 Intro to Web Computing (Daniel gone); Python, ADT, library, data analytics interface; <strong>possible to turn Daniel’s Perl class to Python for all MS &amp; Ph.D. students</strong></li>
   <li>MIS 531 DBMS (Faiz); relations, SQL</li>
-  <li>è MIS 587 Business Intelligence (Yong); data warehouse, KPI, Web analytics; <strong>possible co-listed as MIS 487 elective</strong></li>
-  <li>è MIS 510 <strong>Data &amp; Web Mining (Gondy)</strong>; intro to web, web APIs, DM and text mining; <strong>possible for Fall as Introduction required course</strong></li>
-  <li>è MIS 545 Data Mining for Business (Bin); classification, clustering; <strong>possible to cover deep learning (CNN/RNN) for MS and Ph.D. students; possible co-listed as MIS 445 elective; possible for Spring after MIS 510 as elective</strong></li>
-  <li>è MIS 584 Big Data Technologies (Yong); Hadoop, Spark; MLlib; <strong>possible use of AWS for free; need to combine with MIS 586 Big Data Analytics (Youn; currently wrong SNA content); possible co-listed as MIS 484 elective</strong></li>
+  <li>* MIS 587 Business Intelligence (Yong); data warehouse, KPI, Web analytics; <strong>possible co-listed as MIS 487 elective</strong></li>
+  <li>* MIS 510 <strong>Data &amp; Web Mining (Gondy)</strong>; intro to web, web APIs, DM and text mining; <strong>possible for Fall as Introduction required course</strong></li>
+  <li>* MIS 545 Data Mining for Business (Bin); classification, clustering; <strong>possible to cover deep learning (CNN/RNN) for MS and Ph.D. students; possible co-listed as MIS 445 elective; possible for Spring after MIS 510 as elective</strong></li>
+  <li>* MIS 584 Big Data Technologies (Yong); Hadoop, Spark; MLlib; <strong>possible use of AWS for free; need to combine with MIS 586 Big Data Analytics (Youn; currently wrong SNA content); possible co-listed as MIS 484 elective</strong></li>
   <li>MIS 5XX, <strong>Optimization (Youn);</strong> <strong>possible new course, see above</strong></li>
   <li>MIS 6XX <strong>Social Network Analysis (Sudha); possible for both Ph.D. and selected MS students</strong></li>
 </ol>
