--- a/index.html
+++ b/index.html
@@ -140,13 +140,16 @@ a:link,a:visited {
 
 
 <h3>TOPIC 2: Web Mining (Surface Web, Deep Web, Social Web)</h3>
-<ol><li>Inside Internet Search Engines, by Jan Pedersen and William Chang (SIGIR 1999)</li>
-<ol><li><a href="/courses/MIS510/2_insideinternetsearch_engines_fundamentals.ppt">Fundamentals</a>, by Jan Pedersen and William Chang (SIGIR 1999) (398K)</li>
-<li><a href="/courses/MIS510/3_insideinternetsearchengines_spidering_and_indexing.ppt">Spidering and Indexing</a>, by Jan Pedersen and William Chang (SIGIR 1999) (41K)</li>
-<li><a href="/courses/MIS510/4_insideinternetsearchengines_search.ppt">Search</a>, by Jan Pedersen and William Chang (SIGIR 1999) (553K)</li>
-<li><a href="/courses/MIS510/5_insideinternetsearchengines_products.ppt">Products</a>, by William Chang and Jan Pedersen (SIGIR 1999) (75K)</li>
-<li><a href="/courses/MIS510/6_insideinternetsearchengines_business.ppt">Business</a>, by William Chang and Jan Pedersen (SIGIR 1999) (37K)</li>
+<ol><li>Inside Internet Search Engines </li>
+<ol>
+<li><a href="/courses/MIS510/2_insideinternetsearch_engines_fundamentals.ppt">Fundamentals</a>, by Jan Pedersen and William Chang (SIGIR 1999) </li>
+<li><a href="/courses/resources/GoogleArc.pdf">Google Architecture and Technologies</a>, by Dr. Chen (2020)</li>
+<li><a href="/courses/MIS510/3_insideinternetsearchengines_spidering_and_indexing.ppt">Spidering and Indexing</a>, by Jan Pedersen and William Chang (SIGIR 1999) </li>
+<li><a href="/courses/MIS510/4_insideinternetsearchengines_search.ppt">Search</a>, by Jan Pedersen and William Chang (SIGIR 1999) </li>
+<li><a href="/courses/MIS510/5_insideinternetsearchengines_products.ppt">Products</a>, by William Chang and Jan Pedersen (SIGIR 1999) </li>
+<li><a href="/courses/MIS510/6_insideinternetsearchengines_business.ppt">Business</a>, by William Chang and Jan Pedersen (SIGIR 1999) </li>
 </ol>
+<li><a href="/courses/resources/Solutions.ppt">Search Algorithms Example</a>, by Dr. Chen (2020)</li>
 <li><a href="/courses/resources/search-rhodes-lee-giles.pptx">Search Engines and Their Algorithms</a>, by C. Lee Giles (2018) (33M)</li>
 <li><a href="/courses/MIS510/9_brin98anatomy.pdf" target="_blank">The Anatomy of a Large-Scale Hypertextual Web Search Engine</a>, S. Brin and L. Page (1998)</li>
 <li><a href="/courses/MIS510/7_mis510-google-2007.ppt">Page Rank and Google Story</a>, by Vise and Malseed, 2005</li>
