--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ a:link,a:visited {
 <li><a href="/courses/MIS510/5_insideinternetsearchengines_products.ppt">Products</a>, by William Chang and Jan Pedersen (SIGIR 1999) </li>
 <li><a href="/courses/MIS510/6_insideinternetsearchengines_business.ppt">Business</a>, by William Chang and Jan Pedersen (SIGIR 1999) </li>
 </ol>
-<li><a href="/courses/resources/Solutions.ppt">Search Algorithms Example</a>, by Dr. Chen (2020)</li>
+<li><a href="/courses/resources/Solutions.ppt">Search Algorithms by Example</a>, by Dr. Chen (2020)</li>
 <li><a href="/courses/resources/search-rhodes-lee-giles.pptx">Search Engines and Their Algorithms</a>, by C. Lee Giles (2018) (33M)</li>
 <li><a href="/courses/MIS510/9_brin98anatomy.pdf" target="_blank">The Anatomy of a Large-Scale Hypertextual Web Search Engine</a>, S. Brin and L. Page (1998)</li>
 <li><a href="/courses/MIS510/7_mis510-google-2007.ppt">Page Rank and Google Story</a>, by Vise and Malseed, 2005</li>
