--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ a:link,a:visited {
 <li><a href="/courses/resources/GoogleArc.pdf">Google Architecture and Technologies</a>, by Dr. Chen (2020)</li>
 <li><a href="/courses/MIS510/3_insideinternetsearchengines_spidering_and_indexing.ppt">Spidering and Indexing</a>, by Jan Pedersen and William Chang (SIGIR 1999) </li>
 <li><a href="/courses/MIS510/4_insideinternetsearchengines_search.ppt">Search</a>, by Jan Pedersen and William Chang (SIGIR 1999) </li>
-<li><a href="/courses/resources/Solutions.ppt">Search Algorithms by Example</a>, by Dr. Chen (2020)</li>
+<li><a href="/courses/resources/Solution.pptx">Search Algorithms by Example</a>, by Dr. Chen (2020)</li>
 <li><a href="/courses/MIS510/5_insideinternetsearchengines_products.ppt">Products</a>, by William Chang and Jan Pedersen (SIGIR 1999) </li>
 <li><a href="/courses/MIS510/6_insideinternetsearchengines_business.ppt">Business</a>, by William Chang and Jan Pedersen (SIGIR 1999) </li>
 </ol>
