--- a/index.html
+++ b/index.html
@@ -143,17 +143,17 @@ a:link,a:visited {
 <ol><li>Inside Internet Search Engines </li>
 <ol>
 <li><a href="/courses/MIS510/2_insideinternetsearch_engines_fundamentals.ppt">Fundamentals</a>, by Jan Pedersen and William Chang (SIGIR 1999) </li>
-<li><a href="/courses/resources/GoogleArc.pdf">Google Architecture and Technologies</a>, by Dr. Chen (2020)</li>
 <li><a href="/courses/MIS510/3_insideinternetsearchengines_spidering_and_indexing.ppt">Spidering and Indexing</a>, by Jan Pedersen and William Chang (SIGIR 1999) </li>
 <li><a href="/courses/MIS510/4_insideinternetsearchengines_search.ppt">Search</a>, by Jan Pedersen and William Chang (SIGIR 1999) </li>
-<li><a href="/courses/resources/Solution.pptx">Search Algorithms by Example</a>, by Dr. Chen (2020)</li>
 <li><a href="/courses/MIS510/5_insideinternetsearchengines_products.ppt">Products</a>, by William Chang and Jan Pedersen (SIGIR 1999) </li>
 <li><a href="/courses/MIS510/6_insideinternetsearchengines_business.ppt">Business</a>, by William Chang and Jan Pedersen (SIGIR 1999) </li>
 </ol>
 <li><a href="/courses/resources/search-rhodes-lee-giles.pptx">Search Engines and Their Algorithms</a>, by C. Lee Giles (2018) (33M)</li>
 <li><a href="/courses/MIS510/9_brin98anatomy.pdf" target="_blank">The Anatomy of a Large-Scale Hypertextual Web Search Engine</a>, S. Brin and L. Page (1998)</li>
+<li><a href="/courses/resources/GoogleArc.pdf">Google Architecture and Technologies</a>, by Dr. Chen (2020)</li>
 <li><a href="/courses/MIS510/7_mis510-google-2007.ppt">Page Rank and Google Story</a>, by Vise and Malseed, 2005</li>
 <li><a href="/courses/MIS510/11_winston1984-ai-ch4.pdf" target="_blank">AI, Chapter 4. Search Algorithm</a>, Winston (1984)</li>
+<li><a href="/courses/resources/Solution.pptx">Search Algorithms with Example</a>, by Dr. Chen (2020)</li>
 <li><a href="/courses/MIS510/15_gas.pdf" target="_blank">GA Handout</a> (27M)</li>
 <li><a href="/courses/resources/network_science_overview.pptx">Network Science</a> (Sagar Samtani, Weifeng Li, Hsinchun Chen, 2016)</li>
 <li><a href="/courses/MIS510/2_greatgiveaway.pdf" target="_blank">The Great Giveaway (25M)</a>, by Erick Schonfeld, Business 2.0 (April 2005)</li>
