--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ a:link,a:visited {
 <li><a href="/courses/resources/GoogleArc.pdf">Google Architecture and Technologies</a>, by Dr. Chen (2020)</li>
 <li><a href="/courses/MIS510/7_mis510-google-2007.ppt">Page Rank and Google Story</a>, by Vise and Malseed, 2005</li>
 <li><a href="/courses/MIS510/11_winston1984-ai-ch4.pdf" target="_blank">AI, Chapter 4. Search Algorithm</a>, Winston (1984)</li>
-<li><a href="/courses/resources/Solution.pptx">Search Algorithms with Example</a>, by Dr. Chen (2020)</li>
+<li><a href="/courses/resources/Search_algorithms.pptx">Search Algorithms with Examples</a>, by Dr. Chen (2020)</li>
 <li><a href="/courses/MIS510/15_gas.pdf" target="_blank">GA Handout</a> (27M)</li>
 <li><a href="/courses/resources/network_science_overview.pptx">Network Science</a> (Sagar Samtani, Weifeng Li, Hsinchun Chen, 2016)</li>
 <li><a href="/courses/MIS510/2_greatgiveaway.pdf" target="_blank">The Great Giveaway (25M)</a>, by Erick Schonfeld, Business 2.0 (April 2005)</li>
