--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ a:link,a:visited {
 <li><a href="/courses/MIS510/6c-globalsurveillance-2009.pdf" target="_blank">AI for Global Disease Surveillance</a>, by Hsinchun Chen and Daniel Zeng (November/December 2009), IEEE IS</li>
 <li><a href="/courses/MIS611D/ieee-is-lin-2014.pdf" target="_blank">Time-To-Event Predictive Modeling for Chronic Conditions Using Electronic Health Records</a>, by Yu-Kai Lin, Hsinchun Chen, Randall A. Brown, Shu-Hsing Li, and Hung-Jen Yang (2014), JBI</li>
 <li><a href="/courses/resources/lin_et_al_bmtl_2017_misq.pdf" target="_blank">Healthcare Predictive Analytics for Risk Profiling in Chronic Care: A Bayesian Multitask Learning Approach</a>, by Yu-Kai Lin et al., 2017, MISQ</li>
+<li><a href="/courses/resources/misq_2020.pdf" target="_blank"> Connecting Systems, Data, and People: A Multidiciplinary Research Roadmap for Chronic Disease management</a>, by Indranil Bardhan, Hsinchun Chen, and Elena Karahanna, 2020, MISQ</li>
 </ol>
 
 <li>Smart Business and Money</li>
@@ -150,10 +151,10 @@ a:link,a:visited {
 </ol>
 <li><a href="/courses/resources/search-rhodes-lee-giles.pptx">Search Engines and Their Algorithms</a>, by C. Lee Giles (2018) (33M)</li>
 <li><a href="/courses/MIS510/9_brin98anatomy.pdf" target="_blank">The Anatomy of a Large-Scale Hypertextual Web Search Engine</a>, S. Brin and L. Page (1998)</li>
-<li><a href="/courses/resources/GoogleArc.pdf">Google Architecture and Technologies</a>, by Dr. Chen (2020)</li>
+<li><a href="/courses/resources/GoogleArc.pdf">Google Architecture and Technologies</a>, by Hsinchun Chen (2020)</li>
 <li><a href="/courses/MIS510/7_mis510-google-2007.ppt">Page Rank and Google Story</a>, by Vise and Malseed, 2005</li>
 <li><a href="/courses/MIS510/11_winston1984-ai-ch4.pdf" target="_blank">AI, Chapter 4. Search Algorithm</a>, Winston (1984)</li>
-<li><a href="/courses/resources/Search_algorithms.pptx">Search Algorithms with Examples</a>, by Dr. Chen (2020)</li>
+<li><a href="/courses/resources/Search_algorithms.pptx">Search Algorithms with Examples</a>, by Hsinchun Chen, and Mohammadreza Ebrahimi (2020)</li>
 <li><a href="/courses/MIS510/15_gas.pdf" target="_blank">GA Handout</a> (27M)</li>
 <li><a href="/courses/resources/network_science_overview.pptx">Network Science</a> (Sagar Samtani, Weifeng Li, Hsinchun Chen, 2016)</li>
 <li><a href="/courses/MIS510/2_greatgiveaway.pdf" target="_blank">The Great Giveaway (25M)</a>, by Erick Schonfeld, Business 2.0 (April 2005)</li>
