--- a/index.html
+++ b/index.html
@@ -156,11 +156,12 @@ a:link,a:visited {
 <li><a href="/courses/MIS510/11_winston1984-ai-ch4.pdf" target="_blank">AI, Chapter 4. Search Algorithm</a>, Winston (1984)</li>
 <li><a href="/courses/resources/Search_algorithms.pptx">Search Algorithms with Examples</a>, by Hsinchun Chen, and Mohammadreza Ebrahimi (2020)</li>
 <li><a href="/courses/MIS510/15_gas.pdf" target="_blank">GA Handout</a> (27M)</li>
-<li><a href="/courses/resources/network_science_overview.pptx">Network Science</a> (Sagar Samtani, Weifeng Li, Hsinchun Chen, 2016)</li>
+<li><a href="/courses/resources/network_science_overview.pptx">Network Science</a> by Sagar Samtani, Weifeng Li, Hsinchun Chen, 2016</li>
 <li><a href="/courses/MIS510/2_greatgiveaway.pdf" target="_blank">The Great Giveaway (25M)</a>, by Erick Schonfeld, Business 2.0 (April 2005)</li>
 <li><a href="/courses/MIS510/5_longtail.pdf" target="_blank">The Long Tail</a>, by Chris Anderson, WIRED Magazine (December 2004)</li>
 <li><a href="http://www.youtube.com/watch?v=6gmP4nk0EOE" target="_blank">Web 2.0 ... The Machine is Us/ing Us</a> (YouTube)</li>
 <li><a href="http://www.oreilly.com/pub/a/web2/archive/what-is-web-20.html" target="_blank">What Is Web 2.0? Design Patterns and Business Models for the Next Generation of Software</a>, by Tim O'Reilly (2005)</li>
+<li><a href="/courses/resources/Web2-Feb2009.ppt" target="_blank">Web 2.0: Introduction</a>, by Hsinchun Chen, 2009 </li>
 <li><a href="/courses/MIS510/facebookstory-february_2012.pptx">Facebook Story</a> (2012)</li>
 <li>Communications of the ACM (2011):</li>
 <ol><li><a href="/courses/MIS510/reflecting_on_the_darpa_red_balloon_challenge.pdf" target="_blank">Reflecting on the DARPA Red Balloon Challenge</a>, by John C. Tang et al. (April 2011)</li>
