--- a/MIS464/index.html
+++ b/MIS464/index.html
@@ -156,8 +156,422 @@ readings are hosted on this permanent and open Github site. Class communications
 <p><h3>D2L CLASS SUPPORT</h3></p>
 <p>The class will be supported by D2L (by class TA) in the following areas: (1) class announcements, assignments, and email to the entire class, (2) students submitting assignments, papers, and presentation slides online, (3) grade postings and notifications for all students, (4) optional periodic quizzes to gauge students’ progress and understanding.</p>
 
+<table cellspacing="0" cellpadding="0" border="0">
+  <tbody>
+    <tr>
+      <td colspan="3" width="61%" valign="bottom">
+        <p><strong>COURSE OUTLINE (tentative)</strong></p>
+      </td>
+      <td width="31%" valign="bottom">
+        <p>&nbsp;</p>
+      </td>
+      <td width="8%" valign="bottom">
+        <p>&nbsp;</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p><strong>DATE</strong></p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p><strong>TOPIC</strong></p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p><strong>CONTENT/NOTES</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Jan 16&nbsp;</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Syllabus &amp; registration</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Class roster, syllabus</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Jan 21 (T)</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p><strong><u>MIS, CS, Design Science Overview</u></strong></p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Readings, discussions</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Jan 23</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Big data, applications, research template</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Readings, discussions</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Jan 24 (F)</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p><strong>Python</strong> review</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p><strong>TA session/lab</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Jan 28 (T)</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>BI, data analytics, data mining, ML</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Readings, discussions</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Jan 30</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>AI, deep learning</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Readings, discussions</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>&nbsp;</p>
+      </td>
+      <td colspan="4" width="86.5%" valign="bottom">
+        <p><strong>PROPOSAL DUE (REVIEW &amp; RESEARCH, 5%)</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Feb 4 (T)</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p><strong><u>Web Computing &amp; Mining</u></strong></p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Overview, discussions</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Feb 6</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p><strong>Tableau</strong></p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p><strong>TA session/lab</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.52253756260434%" valign="bottom">
+        <p>Feb 11 (T)</p>
+      </td>
+      <td width="38.230383973288816%" valign="bottom">
+        <p>Web 1.0, Surface Web</p>
+      </td>
+      <td width="9.181969949916528%" valign="bottom">
+        <p>&nbsp;</p>
+      </td>
+      <td colspan="2" width="39.065108514190314%" valign="bottom">
+        <p>Overview, discussions</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Feb 13</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Search engine, search algorithms</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Readings, lecture</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Feb 18 (T)</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Web 2.0, Social Web</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Overview, discussions</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Feb 20</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Deep web, social media, SNA</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Readings, lecture</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Feb 25 (T)</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Web 3.0, Mobile Web; big data,&nbsp;Hadoop/SPARK</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Overview, discussions</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>&nbsp;</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p><strong>LAB 1 DUE (TABLEAU, 10%)</strong></p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>&nbsp;</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Feb 27</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Web 4.0, AI Web, 5G, cybersecurity &amp; privacy</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Overview, discussions</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Mar 3 (T)</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p><strong><u>Data Mining</u></strong></p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Overview, discussions</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Mar 5</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Symbolic learning, AI, decision trees</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>ID3, RF</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Mar 9-13</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>SPRING RECESS</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>NO CLASS</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Mar 17 (T)</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p><strong>MIDTERM EXAM (30%)</strong></p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>&nbsp;</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Mar 19</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Statistical analysis, regression, Bayes</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>&nbsp;Overview, discussions</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Mar 24 (T)</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p><strong>Weka,&nbsp;</strong>DM tools</p>
+      </td>
+      <td width="31%" valign="bottom">
+        <p>&nbsp;<strong>TA session/lab</strong></p>
+      </td>
+      <td width="8%" valign="bottom">
+        <p>&nbsp;</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Mar 26</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Statistical ML, SVM, CRF&nbsp;</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Readings, lecture</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Mar 31 (T)</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Neural networks, Backprop, SOM</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Readings, lecture</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Apr 2</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Deep learning, CNN</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Readings, lecture</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Apr 7 (T)</p>
+      </td>
+      <td colspan="4" width="86.5%" valign="bottom">
+        <p><strong>REVIEW PAPER/PRESENTATION (15%)</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>&nbsp;</p>
+      </td>
+      <td colspan="4" width="86.5%" valign="bottom">
+        <p><strong>LAB 2 DUE (WEKA, 10%)</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Apr 9</p>
+      </td>
+      <td colspan="4" width="86.5%" valign="bottom">
+        <p><strong>REVIEW PAPER/PRESENTATION</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Apr 14 (T)</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Deep learning, LSTM</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Readings, lecture</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Apr 16</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p><strong><u>Text Mining</u></strong></p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Overview, discussions</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Apr 21 (T)</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>IE, Sentiment analysis, Topic modeling</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Readings, lecture</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Apr 23</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Information Visualization</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Readings, lecture</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Apr 28 (T)</p>
+      </td>
+      <td colspan="4" width="86.5%" valign="bottom">
+        <p><strong>RESEARCH PROJECT PRESENTATION (15%)</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Apr 30</p>
+      </td>
+      <td colspan="4" width="86.5%" valign="bottom">
+        <p><strong>RESEARCH PROJECT PRESENTATION</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>May 5 (T)</p>
+      </td>
+      <td colspan="4" width="86.5%" valign="bottom">
+        <p><strong>RRESEARCH PROJECT PRESENTATION</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>May 8-14</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>FINAL EXAM WEEK</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>NO EXAM FOR MIS 464</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>May 8 (F)</p>
+      </td>
+      <td colspan="4" width="86.5%" valign="bottom">
+        <p><strong>RESEARCH PROJECT PAPER DUE (15%)</strong></p>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
-<table style="border-collapse:collapse;" cellspacing="0" cellpadding="0" border="0">
   <tbody>
     <tr>
       <td colspan="3" style="width: 274.35pt;padding: 0in;height: 15.55pt;vertical-align: bottom;" width="61%" valign="bottom">
