--- a/index.html
+++ b/index.html
@@ -255,6 +255,8 @@ a:link,a:visited {
 
 </ol><li><a href="/courses/resources/IoT-Device-Security-DRAFT.pptx" target="_blank">IoT Device Security</a>, by Steve Ullman, 2019.</li>
 <li><a href="/courses/resources/Cyber Threat Intelligence.pptx" target="_blank">Cyber Threat Intelligence</a>, by Sagar Samtani and Hsinchun Chen, 2019</li>
+<li><a href="/courses/resources/Privacy_Future.pptx" target="_blank"> Looking to the Future of Cybersecurity</a>, by Fang Yu Lin and Hsinchun Chen, 2019</li>
+
 <li><a href="/courses/resources/Computational-Propaganda-Module-DRAFT.pptx" target="_blank">Computational Propaganda and Political Disinformation</a>, by Zara AhmadPost and Steve Ullman, 2019.</li>
 
 
