--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ a:link,a:visited {
 <ol><li><a href="/courses/resources/vb_threats_2015.pdf" target="_blank">Exploring Threats and Vulnerabilities in Hacker Web: Forums, IRC and Carding Shops</a>, by Benjamin et al., 2015, IEEE ISI</li>
 <li><a href="/courses/resources/vb_language_2015.pdf" target="_blank">Developing Understanding of Hacker Language through the use of Lexical Semantics </a>, by Benjamin and Chen, 2015, IEEE ISI</li>
 <li><a href="/courses/resources/reza_2018_detecting_cyber_threats_in_non-english_dark_net.pdf" target="_blank">Detecting Cyber Threats in Non-English Dark Net Markets: A Cross-Lingual Transfer Learning Approach</a>, by Ebrahimi et al., 2018, IEEE ISI</li>
+<li><a href="/courses/resources/ISI_DNM_collection.pdf" target="_blank">Identifying, Collecting, and Presenting Hacker Community Data: Forums, IRC, Carding Shops, and DNMs</a>, by Du et al., 2018, IEEE ISI</li>
 </ol></ol>
 
 <li>Sample Research by Applications</a>, by Dr. Hsinchun Chen</li>
