--- a/MIS464/index.html
+++ b/MIS464/index.html
@@ -23,7 +23,7 @@ a:link,a:visited {
 <body style="margin:20px; padding:0">
         <div id="content" class="column" role="main">
         <a id="main-content"></a>   	
-                          <h2 class="title" id="page-title"><font face="MiloWeb">MIS 464, Data Analytics</font></h2>                                                       
+                          <h2 class="title" id="page-title"><font face="MiloWeb">MIS 464 “DATA ANALYTICS” - Spring 2020 (Updated for New UA Online Class after 3/19/2020)</font></h2>                                                       
 <div id="block-fieldblock-node-page-default-field-image" class="block block-fieldblock page-image-block first odd">      
   <div class="field field-name-field-image field-type-image field-label-hidden">
     <img typeof="foaf:Image" src="/courses/MIS464/wordle496a.png" width="1058" height="386" alt="" />  </div>
@@ -58,11 +58,12 @@ a:link,a:visited {
 <p>The <a href="/courses/index.html">Class Resources page</a> contains links to a variety of resources helpful for the study of the various topics covered by this course.</p>
 <h3><a name="information" id="information"></a>CLASS INFORMATION for Spring 2020</h3>
 <p>Instructor:  <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
-<p>Time/Classroom: T/TH 9:30AM-10:45AM, MCCL 130 <br />Instructor’s Office Hours: T/TH 10:45-11:45AM or by appointment <br />
+<p>Time/Virtual Classroom: T/TH 9:30AM-10:45AM via Zoom and D2L <br />Instructor’s Virtual Office Hours: T/TH 10:45-11:45AM via Zoom and D2L <br />
 Office/Phone: MCCL 430X, (520) 621-4153 <br />
 Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu</a>; <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen">https://ai.arizona.edu/about/director</a> (email is the best way to reach me!) <br />
 Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://ailab-ua.github.io/courses/MIS464</a>  <strong>(IMPORTANT!) All class slides, papers, and
-readings are hosted on this permanent and open Github site. Class communications, assignments, submissions, and gradings will be supported by the UA/Eller D2L system (by TA). </strong> <br />Teaching Assistants (TA): <br /> - (Reza) Mohammadreza Ebrahimi, <a href="mailto:ebrahimi@email.arizona.edu">ebrahimi@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430 Cubicle #34-35) <br/> TA Office Hours: TA hours (before assignment and project deadlines) will be announced via email and D2L.</p>
+readings are hosted on this permanent and open Github site. Class communications, assignments, submissions, and gradings will be supported by the UA/Eller D2L system (by TA). </strong> <br />Teaching Assistants (TA): <br /> (Reza) Mohammadreza Ebrahimi ebrahimi@email.arizona.edu, 4th-year
+Ph.D. student (office: MCCL 430 Cubical #34-35); TA Virtual Office Hours: M/W 1-2PM via Zoom <br/>
 <h3><a name="material" id="material"></a>CLASS MATERIAL (Optional)</h3>
 <ul><li><em>Data Mining: Practical Machine Learning Tools and Techniques, </em>by Witten, Frank, Hall &amp; Pal, 4th Edition, 2017, Morgan Kaufmann (also with a 5-week MOOC course). See more at:<em>  </em><a href="http://www.cs.waikato.ac.nz/ml/weka/">http://www.cs.waikato.ac.nz/ml/weka/</a></li>
 <li><em>Artificial Intelligence: A Modern Approach, </em>by Russel &amp; Norvig, 3rd Edition, 2000, Prentice Hall<em><br /></em></li>
