--- a/MIS464/index.html
+++ b/MIS464/index.html
@@ -62,7 +62,7 @@ a:link,a:visited {
 Office/Phone: MCCL 430X, (520) 621-4153 <br />
 Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu</a>; <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen">https://ai.arizona.edu/about/director</a> (email is the best way to reach me!) <br />
 Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://ailab-ua.github.io/courses/MIS464</a>  <strong>(IMPORTANT!) All class slides, papers, and
-readings are hosted on this permanent and open Github site. Class communications, assignments, submissions, and gradings will be supported by the UA/Eller D2L system (by TA). </strong> <br />Teaching Assistants (TA): <br /> (Reza) Mohammadreza Ebrahimi ebrahimi@email.arizona.edu, 4th-year
+readings are hosted on this permanent and open Github site. Class communications, assignments, submissions, and gradings will be supported by the UA/Eller D2L system (by TA). </strong> <br />Teaching Assistants (TA): (Reza) Mohammadreza Ebrahimi ebrahimi@email.arizona.edu, 4th-year
 Ph.D. student (office: MCCL 430 Cubical #34-35); TA Virtual Office Hours: M/W 1-2PM via Zoom <br/>
 <h3><a name="material" id="material"></a>CLASS MATERIAL (Optional)</h3>
 <ul><li><em>Data Mining: Practical Machine Learning Tools and Techniques, </em>by Witten, Frank, Hall &amp; Pal, 4th Edition, 2017, Morgan Kaufmann (also with a 5-week MOOC course). See more at:<em>  </em><a href="http://www.cs.waikato.ac.nz/ml/weka/">http://www.cs.waikato.ac.nz/ml/weka/</a></li>
@@ -113,9 +113,9 @@ Ph.D. student (office: MCCL 430 Cubical #34-35); TA Virtual Office Hours: M/W 1-
 <p><h3>Topic 4: Text Mining (handling unstructured text; a multilingual world)</h3></p>
 <ul>
   <li>Digital library and search engines</li>
-  <li>Information retrieval &amp; extraction: vector space model, entity &amp; topic extraction</li>
+  <li>Information retrieval & extraction: vector space model, entity & topic extraction</li>
   <li>Authorship analysis: lexical, syntactic, structural, and semantic analysis</li>
-  <li>Sentiment and affect analysis: lexicon-based, machine learning based</li>
+  <li>Sentiment and affect analysis: lexicon-based, machine learning based Topic modeling; word embeddings</li>
   <li>Topic modeling; word embeddings</li>
   <li>Information visualization: scientific, text and web visualization</li>
 </ul>
@@ -131,11 +131,12 @@ Ph.D. student (office: MCCL 430 Cubical #34-35); TA Virtual Office Hours: M/W 1-
 </ul>
 </ul><h3><a name="grading" id="grading"></a>GRADING POLICY (ABSOLUTE SCALE A: 90+; B: 80+; C: 70+; D 70-)</h3>
 <ul>
-  <li>Team project proposal (1/30): 5%</li>
-  <li>Team lab assignments (2/25; 4/7): 20% &nbsp; &nbsp; &nbsp; &nbsp;</li>
-  <li>Midterm exam (3/17): 30% &nbsp; &nbsp; &nbsp; &nbsp;</li>
-  <li>Team review paper (4/7): 15%</li>
-  <li>Team research project (4/28): 30% &nbsp; &nbsp; &nbsp; &nbsp;</li>
+  <li>Team project proposal: 5%</li>
+  <li>Team lab assignment 1 (Tableau): 10% &nbsp; &nbsp; &nbsp; &nbsp;</li>
+  <li>Midterm exam: 30% &nbsp; &nbsp; &nbsp; &nbsp;</li>
+  <li>Team review paper: 15%</li>
+  <li>Team lab assignment 2 (Weka): 10% &nbsp; &nbsp; &nbsp; &nbsp;</li>
+  <li>Team research project: 30% &nbsp; &nbsp; &nbsp; &nbsp;</li>
   <li><u>Class attendance and participation : 10%</u></li>
   <li>TOTAL : 110%</li>
 </ul>
@@ -143,18 +144,18 @@ Ph.D. student (office: MCCL 430 Cubical #34-35); TA Virtual Office Hours: M/W 1-
 <p><strong>TEAM PROJECT PROPOSAL (5%)</strong></p>
 <p>Each student will be required to form a two-person team with complementary skills (e.g., application knowledge, Python, SQL, analytics, presentation). A team proposal (3 pages, Word document) including plan for both review paper (see below) and research project (see below) will be submitted by each team in the third week of the semester. The proposal needs to justify the selection of application area and includes preliminary ideas or plan for execution.</p>
 <p><h3>TEAM LAB ASSIGNMENTS (20%)</h3></p>
-<p>In order to improve students’ hands-on data analytics knowledge and to facilitate final project execution, there will be two Team Lab Assignments: Tableau (visualization) and Weka (analytics), both are popular data analytics/visualization tools used by data analysts/scientists. Each team is required to identify 1-2 public or open data sources (e.g., data.gov, Kaggle; will be introduced in class) in the application area of their final Research Project (e.g., security, health, finance, e-commerce) and execute selected meaningful data exploration/visualization or analytics functions. Each assignment is worth 10% of final grade. A team report summarizing results with meaningful screen shots (5 pages, IEEE format; will be explained in class) needs to be submitted in two weeks for each assignment. Students are expected to become familiar with selected data extraction, analytics and visualization tools and software.</p>
+<p>In order to improve students’ hands-on data analytics knowledge and to facilitate final project execution, there will be two Team Lab Assignments: Tableau (visualization) and Weka (analytics), both are popular data analytics/visualization tools used by data analysts/scientists. Each team is required to identify 2-3 public or open data sources (e.g., data.gov, Kaggle, UCI) in the application area of their final Research Project (e.g., security, health, finance, e-commerce) and execute selected meaningful data exploration/visualization or analytics (3-4 types) functions. Each assignment is worth 10% of final grade. A team report summarizing results with meaningful screen shots (5 pages, IEEE format) needs to be submitted in two weeks for each assignment via D2L. Students are expected to become familiar with selected data extraction, analytics and visualization tools and software.</p>
 <p><h3>MIDTERM EXAM (30%)</h3></p>
-<p>The midterm exam will be closed book, closed notes and in the short-essay format. The questions will be based mostly on classroom lectures. There will be NO Final Exam for this class. Academic integrity will be strictly enforced. Consequences for cheating will be severe.</p>
-<p><h3>REVIEW PAPER AND PRESENTATION (15%)</h3></p>
-<p>Each team will select an emerging, specific data analytics application area of interest (e.g., health, finance, e-commerce, security) and develop a comprehensive review paper (5 pages, IEEE format) for the topic. Secondary literature review (10-20 references) will be needed based on recent papers published in major news media, magazines, conferences, and journals. Each team (both students) will be required to present their review in the second half of the semester (10 minutes with 8 slides). The instructor will suggest selected emerging application areas for consideration.&nbsp;</p>
+<p>The midterm exam will be closed book, closed notes and in the short-essay format. The questions will be based mostly on classroom lectures. There will be NO Final Exam for this class. D2L and Zoom will be used for this semester.</p>
+<p><h3>REVIEW PAPER (15%)</h3></p>
+<p>Each team will select an emerging, specific data analytics application area of interest (e.g., health, finance, e-commerce, security) and develop a comprehensive review paper (5 pages, IEEE format) for the topic. Secondary literature review (10-20 references) will be needed based on recent papers published in major news media, magazines, conferences, and journals. The paper will be submitted via D2L.</p>
 <p><h3>TEAM RESEARCH PROJECT PRESENTATION/PAPER (30%)</h3></p>
-<p>Each team will be required to propose and execute an interesting and meaningful data analytics research project for applications of interest to the students. The instructor will suggest suitable data and algorithms for consideration. The class TA will also provide assistance in data preparation and analytics using selected open source tools. Each team (both students) will present at the end of the semester (15 minutes with 12 slides) and a final research paper (8 pages, IEEE format) will be submitted after all presentation sessions. The instructor will provide details about the final paper format and structure. Students are expected to gain significant hands-on data analytics skills and knowledge and professional project communication and presentation experiences.&nbsp;</p>
+<p>Each team will be required to propose and execute an interesting and meaningful data analytics research project for applications of interest to the students. The instructor will suggest suitable data and algorithms for consideration. The class TA will also provide assistance in data preparation and analytics using selected open source tools. Each team (both students) will present at the end of the semester via Zoom (15 minutes with 12 PPT slides) and a final research paper (8 pages, IEEE format) will be submitted via D2L after all presentation sessions. The instructor will provide details about the final paper format and structure. Students are expected to gain significant hands-on data analytics skills and knowledge and professional project communication and presentation experiences.</p>
 <p><h3>ATTENDANCE, PARTICIPATION AND ACADEMIC INTEGRITY (10%)</h3></p>
 <p>Students are required to attend all lectures on time and honor academic integrity. Missing classes will result in loss of points or administrative drop by the instructor. Students are required to send excuse notes (via email) to the instructor before missing classes. Students are permitted to bring laptop to classroom for note taking purposes, but not for checking email or web surfing. Professional attitude and strong work ethics are needed for this class. Students are encouraged to consult the instructor for advice and help.</p>
 <p><h3>LAB SESSIONS and GUEST SPEAKERS</h3></p>
 <p>Selected lab sessions will be provided by the class TA during the semester on the following topics: Python, Tableau, Weka, etc. Selected guest speakers may be invited to present in the class.</p>
-<p><h3>D2L CLASS SUPPORT</h3></p>
+<p><h3>D2L & ZOOM CLASS SUPPORT</h3></p>
 <p>The class will be supported by D2L (by class TA) in the following areas: (1) class announcements, assignments, and email to the entire class, (2) students submitting assignments, papers, and presentation slides online, (3) grade postings and notifications for all students, (4) optional periodic quizzes to gauge students’ progress and understanding.</p>
 
 <table style="border-collapse:collapse;" cellspacing="0" cellpadding="0" border="0">
