--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ a:link,a:visited {
 <li><a href="/courses/MIS510/expertprediction.pdf" target="_blank">Expert Prediction, Symbolic Learning, and Neural Networks-An Experiment on Greyhound Racing</a>, by Hsinchun Chen et al., IEEE Expert (December 1994)</li>
 <li>Introduction to Support Vector Machine (SVM) and Conditional Random Field (CRF) (<a href="/courses/MIS510/mis510_2009spring_svm_and_crf.ppt">Long Version</a>, <a href="/courses/MIS510/mis510_2009spring_svm_and_crf_short.ppt">Short Version</a>)</li>
 <li><a href="/courses/MIS510/4_pattern_recognition_using_svm.ppt">Pattern Recognition using Support Vector Machine and Principal Component Analysis</a> (Ahmed Abbasi)</li>
-<li><a href="/courses/resources/predictive_analytics_-_regression_and_classification_samtani_edited_march_8.pptx">Predictive Analytics - Regression and Classification</a> (Weifeng Li, Sagar Samtani, Hsinchun Chen, 2016)</li>
+<li><a href="/courses/resources/PredictiveAnalyticsForDataMining2020.pptx">Predictive Analytics for Data Mining</a> (Weifeng Li, Sagar Samtani, Hsinchun Chen, 2020)</li>
 <li><a href="/courses/resources/logistic_regression_and_elastic_net.pptx">Logistic Regression and Elastic Net</a> (Weifeng Li, Hsinchun Chen, 2016)</li>
 <li><a href="/courses/resources/publicly_available_datasets_hz_updated.pptx">Publicly Available Data Sources</a> (Sagar Samtani and Hsinchun Chen, with updates from Hongyi Zhu, 2019)</li>
 <li><a href="/courses/resources/gibney_2016_google_masters_go.pdf" target="_blank">Google masters Go</a> (Nature, Elizabeth Gibney, January 28, 2016)</li>
