--- a/index.html
+++ b/index.html
@@ -135,7 +135,6 @@ a:link,a:visited {
 <li><a href="/courses/resources/nfl_offensive_player_stats_1999-2013.xlsx">Sample NFL Dataset for Visualization</a></li>
 </ol>
 
-<li><a href="/courses/resources/weka_overview_slides_190117.pptx">WEKA Overview</a> (Sagar Samtani, Weifeng Li, and Hsinchun Chen, with updates from Shuo Yu, 2019)</li>
 <ol>
 <li><a href="/courses/resources/iris-train.arff">iris-trai</a>n, <a href="/courses/resources/iris-test.arff">iris-test</a>, <a href="/courses/resources/houses-train.arff">houses-train</a>, <a href="/courses/resources/houses-test.arff">houses-test</a></li>
 </ol>
@@ -271,7 +270,10 @@ a:link,a:visited {
 <li><a href="/courses/MIS510/yelpsample.rar">Yelp API Sample Code</a></li>
 
 </ol></ol><h3>TOPIC 3: Data Mining (Machine Learning, Deep Learning, AI)</h3>
-<ol><li><a href="/courses/resources/10algorithms-08.pdf" target="_blank">Top 10 Algorithms in Data Mining</a> (PDF)</li>
+<ol>
+<li><a href="/courses/resources/PredictiveAnalyticsForDataMining2020.pptx">Predictive Analytics for Data Mining</a> (Weifeng Li, Sagar Samtani, Hsinchun Chen, 2020)</li>
+<li><a href="/courses/resources/weka_overview_slides_190117.pptx">WEKA Overview</a> (Sagar Samtani, Weifeng Li, and Hsinchun Chen, with updates from Shuo Yu, 2019)</li>
+<li><a href="/courses/resources/10algorithms-08.pdf" target="_blank">Top 10 Algorithms in Data Mining</a> (PDF)</li>
 <li><a href="/courses/MIS510/16_id3.pdf" target="_blank">ID3 Handout</a></li>
 <li><a href="/courses/MIS510/17_bpnn.pdf" target="_blank">Backpropagation Neural Network Handout</a></li>
 <li><a href="/courses/MIS611D/som.pdf" target="_blank">Self-organizing maps: an introduction</a></li>
@@ -279,7 +281,6 @@ a:link,a:visited {
 <li><a href="/courses/MIS510/expertprediction.pdf" target="_blank">Expert Prediction, Symbolic Learning, and Neural Networks-An Experiment on Greyhound Racing</a>, by Hsinchun Chen et al., IEEE Expert (December 1994)</li>
 <li>Introduction to Support Vector Machine (SVM) and Conditional Random Field (CRF) (<a href="/courses/MIS510/mis510_2009spring_svm_and_crf.ppt">Long Version</a>, <a href="/courses/MIS510/mis510_2009spring_svm_and_crf_short.ppt">Short Version</a>)</li>
 <li><a href="/courses/MIS510/4_pattern_recognition_using_svm.ppt">Pattern Recognition using Support Vector Machine and Principal Component Analysis</a> (Ahmed Abbasi)</li>
-<li><a href="/courses/resources/PredictiveAnalyticsForDataMining2020.pptx">Predictive Analytics for Data Mining</a> (Weifeng Li, Sagar Samtani, Hsinchun Chen, 2020)</li>
 <li><a href="/courses/resources/logistic_regression_and_elastic_net.pptx">Logistic Regression and Elastic Net</a> (Weifeng Li, Hsinchun Chen, 2016)</li>
 <li><a href="/courses/resources/publicly_available_datasets_hz_updated.pptx">Publicly Available Data Sources</a> (Sagar Samtani and Hsinchun Chen, with updates from Hongyi Zhu, 2019)</li>
 <li><a href="/courses/resources/gibney_2016_google_masters_go.pdf" target="_blank">Google masters Go</a> (Nature, Elizabeth Gibney, January 28, 2016)</li>
