--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ a:link,a:visited {
 <li><a href="/courses/MIS611D/k-means.pdf" target="_blank">K-means algorithm</a></li>
 <li><a href="/courses/MIS510/expertprediction.pdf" target="_blank">Expert Prediction, Symbolic Learning, and Neural Networks-An Experiment on Greyhound Racing</a>, by Hsinchun Chen et al., IEEE Expert (December 1994)</li>
 <li>Introduction to Support Vector Machine (SVM) and Conditional Random Field (CRF) (<a href="/courses/MIS510/mis510_2009spring_svm_and_crf.ppt">Long Version</a>, <a href="/courses/MIS510/mis510_2009spring_svm_and_crf_short.ppt">Short Version</a>)</li>
-<li><a href="/courses/resources/SVM_Abassi_Chen_March_2020.ppt">Text Classification and Cybersecurity</a> (Ahmed Abbasi, Hsinchun Chen, 2020)</li>
+<li><a href="/courses/resources/SVM_Abassi_Chen_March_2020.ppt">Pattern Recognition using Support Vector Machine: Text Classification and Cybersecurity</a> (Ahmed Abbasi, Hsinchun Chen, 2020)</li>
 <li><a href="/courses/MIS510/4_pattern_recognition_using_svm.ppt">Pattern Recognition using Support Vector Machine and Principal Component Analysis</a> (Ahmed Abbasi, Hsinchun Chen, 2007)</li>
 <li><a href="/courses/resources/logistic_regression_and_elastic_net.pptx">Logistic Regression and Elastic Net</a> (Weifeng Li, Hsinchun Chen, 2016)</li>
 <li><a href="/courses/resources/publicly_available_datasets_hz_updated.pptx">Publicly Available Data Sources</a> (Sagar Samtani and Hsinchun Chen, with updates from Hongyi Zhu, 2019)</li>
