--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@ a:link,a:visited {
 </ol></ol><h3>TOPIC 3: Data Mining (Machine Learning, Deep Learning, AI)</h3>
 <ol>
 <li><a href="/courses/resources/PredictiveAnalyticsForDataMining2020.pptx">Predictive Analytics for Data Mining</a> (Weifeng Li, Sagar Samtani, Hsinchun Chen, 2020)</li>
+<li><a href="/courses/resources/Clustering_for_Data_Mining_2020.pptx">Clustering for Data Mining: Overview and Examples</a> (Dr. Hsinchun Chen, 2020)</li>
 <li><a href="/courses/resources/weka_overview_slides.pptx">WEKA Overview</a> (Sagar Samtani, Weifeng Li, and Hsinchun Chen, with updates from Shuo Yu, 2019)</li>
 
 <ol>
