--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@ a:link,a:visited {
 <ol>
 <li><a href="/courses/resources/PredictiveAnalyticsForDataMining2020.pptx">Predictive Analytics for Data Mining</a> (Weifeng Li, Sagar Samtani, Hsinchun Chen, 2020)</li>
 <li><a href="/courses/resources/Clustering_for_Data_Mining_2020.pptx">Clustering for Data Mining: Overview and Examples</a> (Dr. Hsinchun Chen, 2020)</li>
+<li><a href="/courses/resources/Neural_Networks_FFBP_SOM_March_2020.pptx">Neural Networks: Feedforward Backpropagation NN and Self-Organizing Map</a> (Dr. Hsinchun Chen, 2020)</li>
 <li><a href="/courses/resources/weka_overview_slides.pptx">WEKA Overview</a> (Sagar Samtani, Weifeng Li, and Hsinchun Chen, with updates from Shuo Yu, 2019)</li>
 
 <ol>
