--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@ a:link,a:visited {
 
 </ol><h3>MISCELLANEOUS RESOURCES</h3>
 <ul><li><a href="/courses/MIS510/mis510-syllabus-spring-2014.pdf" target="_blank">MIS 510 Syllabus</a></li>
+<li><a href="/courses/resources/Chen_Major_Journals_&_Grants_September_2020.pptx">Publishing in Major Journals & Getting Major Grants Consistently</a>by Dr. Hsinchun Chen</li>
 <!--  COMMENTED OUT  
   <li><a href="/courses/resources/SecuritySoftwareTweets.zip" target="_blank">MIS 562 Twitter</a></li>
   -->
