--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ a:link,a:visited {
 <ol>
 <li><a href="/courses/resources/nfl_offensive_player_stats_1999-2013.xlsx">Sample NFL Dataset for Visualization</a></li>
 </ol>
+<li><a href="/courses/resources/HandsonTraining2020.pptx">Dark Web and Privacy Analytics Research: Hands-on Training and Planning</a>, by Ebrahimi et. al., 2020
 
 </ol>
 
